# KiCAD-MCP-Server

./: .gitignore  .pre-commit-config.yaml  LEFTHOOK_SETUP.md  lefthook.yml  package-lock.json  pyproject.toml
python/: kicad_interface.py  test_ipc_backend.py
python/commands/: __init__.py  board.py  component.py  component_schematic.py  connection_schematic.py  design_rules.py  dynamic_symbol_loader.py  export.py  jlcpcb.py  jlcpcb_parts.py  jlcsearch.py  library.py  library_schematic.py  library_symbol.py  pin_locator.py  project.py  routing.py  schematic.py  schematic_info.py  wire_manager.py
python/commands/board/: __init__.py  layers.py  outline.py  size.py  view.py
python/kicad_api/: __init__.py  base.py  factory.py  ipc_backend.py  swig_backend.py
python/resources/: __init__.py  resource_definitions.py
python/schemas/: __init__.py  tool_schemas.py
python/utils/: __init__.py  kicad_process.py  platform_helper.py
src/: server.ts
src/tools/: registry.ts  schematic.ts
tests/integration/: __init__.py  test_jlcpcb.py
tests/manual/: README.md  __init__.py  test_ipc_backend.py
