[project]
name = "kicad-mcp-server"
version = "2.1.0-alpha"
description = "KiCAD MCP Server for AI-assisted PCB design"
requires-python = ">=3.12"
dependencies = [
    "kicad-skip>=0.1.0",
    "Pillow>=9.0.0",
    "cairosvg>=2.7.0",
    "colorlog>=6.7.0",
    "pydantic>=2.5.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "sexpdata>=1.0.0",
    "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.9.0",
    "pyright>=1.1.390",
    "vulture>=2.14",
    "bandit>=1.7.8",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["python"]

[tool.ruff.lint]
select = ["ALL"]
ignore = [
    "D203", "D213",  # Conflicting docstring rules
    "COM812", "ISC001",  # Conflicts with formatter
    "TRY300",  # Conflicts with RET505 and modern "guard clause" pattern
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "D", "ANN"]
"python/commands/__init__.py" = ["F401"]

[tool.pyright]
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["python"]
exclude = ["**/__pycache__", ".venv"]
reportMissingTypeStubs = false

[tool.vulture]
min_confidence = 80
paths = ["python"]
exclude = ["**/templates/", "**/__pycache__/"]

[tool.bandit]
exclude_dirs = ["tests", "python/tests", "**/__pycache__"]
skips = []
# Security level: medium (default)
# Confidence level: medium (default)

[tool.pytest.ini_options]
testpaths = ["tests", "python/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=python --cov-report=term-missing"
