[project]
name = "kicad-mcp-server"
version = "2.1.0-alpha"
description = "KiCAD MCP Server for AI-assisted PCB design"
requires-python = ">=3.12"
dependencies = [
    "kicad-skip>=0.1.0",
    "Pillow>=9.0.0",
    "cairosvg>=2.7.0",
    "colorlog>=6.7.0",
    "pydantic>=2.5.0",
    "requests>=2.32.5",
    "python-dotenv>=1.0.0",
    "sexpdata>=1.0.0",
    "typing-extensions>=4.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.14.13",  # Strict version requirement (SOTA 2026)
    "pyright>=1.1.408",  # Strict version requirement (SOTA 2026)
    "vulture>=2.14",
    "bandit>=1.9.0",  # Updated for better security checks
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.11.0",
    "types-requests>=2.31.0",
    "types-Pillow>=10.0.0",
    "ipython>=8.14.0",
    "ipdb>=0.13.13",
]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["python"]
unsafe-fixes = false  # Disable auto-fixes that might change behavior

[tool.ruff.lint]
select = ["ALL"]  # All rules enabled
ignore = [
    # Docstring conflicts
    "D203",  # 1 blank line required before class docstring
    "D213",  # Multi-line docstring summary should start at second line
    # Formatter conflicts
    "COM812",  # Trailing comma in collection
    "ISC001",  # Single line implicit string concatenation
    # Architecture/Pattern choices
    "TRY300",  # Use `logging.exception` instead of `logging.error`
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.isort]
# Ensure imports are strict and properly organized
force-sort-within-sections = true  # Force alphabetical order within sections
known-first-party = ["python"]
combine-as-imports = true
force-single-line = false

[tool.ruff.lint.per-file-ignores]
"**/tests/**" = ["S101", "D", "ANN"]
"python/commands/__init__.py" = ["F401"]

[tool.pyright]
# STRICT TYPE CHECKING - for AI code quality enforcement
typeCheckingMode = "strict"
pythonVersion = "3.12"
include = ["python"]
exclude = ["**/__pycache__", ".venv", "**/__init__.py"]

# Strict report settings
reportMissingTypeStubs = false  # Allow missing stubs for third-party libs
reportGeneralTypeIssues = true
reportMissingImports = false  # Allow missing imports if library not typed
reportConstantRedefinition = true
reportInvalidTypeForm = true
reportUnnecessaryIsInstance = true
reportUnnecessaryCast = true
reportUnnecessaryComparison = true
reportIncompatibleMethodOverride = true
reportIncompatibleVariableOverride = true

[tool.vulture]
min_confidence = 80
paths = ["python"]
exclude = ["**/templates/", "**/__pycache__/"]

[tool.bandit]
# SECURITY AUDITING - strict security checks enabled
exclude_dirs = ["tests", "python/tests", "**/__pycache__"]
skips = []  # No skips - all security checks enabled

[tool.pytest.ini_options]
testpaths = ["tests", "python/tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=python --cov-report=term-missing"
